--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,21 +1,26 @@
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.5.0
+    rev: v3.2.0
     hooks:
     -   id: trailing-whitespace
     -   id: end-of-file-fixer
     -   id: check-docstring-first
     -   id: check-json
     -   id: check-yaml
+    -   id: name-tests-test
+    -   id: requirements-txt-fixer
     -   id: double-quote-string-fixer
 -   repo: https://gitlab.com/pycqa/flake8
-    rev: 3.7.9
+    rev: 3.8.3
     hooks:
     -   id: flake8
         additional_dependencies: [flake8-typing-imports==1.7.0]
-
+-   repo: https://github.com/pre-commit/mirrors-autopep8
+    rev: v1.5.4
+    hooks:
+    -   id: autopep8
 -   repo: https://github.com/asottile/reorder_python_imports
-    rev: v2.1.0
+    rev: v2.3.5
     hooks:
     -   id: reorder-python-imports
         args: [--py3-plus]
@@ -24,12 +29,20 @@ repos:
     hooks:
     -   id: add-trailing-comma
         args: [--py36-plus]
--   repo: https://github.com/Lucas-C/pre-commit-hooks
-    rev: v1.1.7
+-   repo: https://github.com/asottile/setup-cfg-fmt
+    rev: v1.6.0
     hooks:
-    -   id: forbid-tabs
-    -   id: remove-tabs
+    -   id: setup-cfg-fmt
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v1.2.3
+    rev: v3.2.0
     hooks:
     -   id: check-added-large-files
+-   repo: https://github.com/asottile/pyupgrade
+    rev: v2.7.2
+    hooks:
+    -   id: pyupgrade
+        args: [--py36-plus]
+-   repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v0.782
+    hooks:
+    -   id: mypy
