--- a/setup.cfg
+++ b/setup.cfg
@@ -27,3 +27,17 @@ python_requires = >=3.6.1
 
 [bdist_wheel]
 universal = True
+
+[mypy]
+check_untyped_defs = true
+disallow_any_generics = true
+disallow_incomplete_defs = true
+disallow_untyped_defs = true
+no_implicit_optional = true
+warn_unreachable = true
+
+[mypy-testing.*]
+disallow_untyped_defs = false
+
+[mypy-tests.*]
+disallow_untyped_defs = false
