--- a/setup.cfg
+++ b/setup.cfg
@@ -4,9 +4,9 @@ version = 2.0.1
 description = A tool to interact with the combilog by Theodor Friedrichs.
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/theendlessriver13/combilog
+url = https://github.com/jkittner/combilog
 author = Jonas Kittner
-author_email = theendlessriver13@users.noreply.github.com
+author_email = jkittner@users.noreply.github.com
 license = MIT
 license_file = LICENSE
 classifiers =
